Added subcategory feature & Fixed thumnails